# Practice_project_2026

./: .gitignore  README.md  project-info.md  summarize.md
docs/: README.md  byox-guide.md  main-report.md  practice_documentation.md  variative-report.md
hugo/: hugo.toml
hugo-main/: hugo.toml
hugo-main/content/: _index.md  about.md  participants.md  resources.md
hugo-main/content/post/: post-1.md  post-2.md  post-3.md
hugo-main/layouts_backup/: baseof.html
hugo-main/static/css/: style.css
hugo-var/: hugo.toml
hugo-var/content/: _index.md  code.md  report.md
hugo/content/: _index.md  about.md  participants.md  resources.md
hugo/content/journal/: _index.md  post-1.md  post-2.md  post-3.md
reports/: README.md
site/: 404.html  index.html  index.xml  sitemap.xml
site/about/: index.html
site/ananke/css/: main.css.map
site/categories/: index.html  index.xml
site/journal/: index.html  index.xml
site/journal/post-1/: index.html
site/journal/post-2/: index.html
site/journal/post-3/: index.html
site/main-site/: 404.html  about.html  index.html  index.xml  journal.html  participants.html  resources.html  sitemap.xml
site/main-site/categories/: index.html  index.xml
site/main-site/post/: index.html  index.xml  post-1.html  (+2 more)
site/participants/: index.html
site/resources/: index.html
site/tags/: index.html  index.xml
site/var-site/: guide.html  index.html  resources.html  sitemap.xml
site/var_site/: 404.html  code.html  index.xml  journal.html  report.html
src/: CMakeLists.txt  main.cpp  main.py
task/: README.md  report_template.md
(+11 files in other folders)
